fix: scrollbar aparecendo no desktop mozilla

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
 
 * {
     box-sizing: border-box;
+    scrollbar-width: none;
 }
 
 html {
@@ -127,7 +128,6 @@ button {
 .cards {
     display: flex;
     overflow-x: scroll;
-    scrollbar-width: none
 }
 
 .card {
